--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -1,6 +1,40 @@
+#series .main-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+#series .main-container .card {
+  padding: 20px;
+  text-align: center;
+  flex-basis: calc(16.6666666667% - 40px);
+}
+#series .main-container .card .background-thumb {
+  height: 200px;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header ul {
+  display: flex;
+  list-style: none;
+  padding-left: 100px;
+}
+header ul li {
+  margin: 10px;
+}
+header ul a {
+  text-decoration: none;
+  color: black;
+}
+header ul a:hover {
+  color: deepskyblue;
+}
