--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -1,4 +1,4 @@
-#series .main-container {
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap);#series .main-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -18,18 +18,34 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 header {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding: 10px;
+}
+header img {
+  height: 80px;
 }
 header ul {
   display: flex;
+  align-items: center;
   list-style: none;
   padding-left: 100px;
 }
 header ul li {
-  margin: 10px;
+  margin: 13px;
+  font-size: 1.1em;
+}
+header ul li input {
+  margin-left: 80px;
+  -webkit-appearance: none;
+  border: none;
+  border-bottom: 2px solid deepskyblue;
+  width: 130px;
 }
 header ul a {
   text-decoration: none;
@@ -37,6 +53,9 @@ header ul a {
 }
 header ul a:hover {
   color: deepskyblue;
+}
+header .jumbotron {
+  height: 200px;
 }
 
 .serie-wrapper {
