--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -5,7 +5,8 @@
 @import "partials/generics";
 @import "partials/header";
 @import "partials/footer";
-@import "partials/serie"
+@import "partials/serie";
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 
