--- a/laravel-comics/public/css/app.css
+++ b/laravel-comics/public/css/app.css
@@ -22,10 +22,27 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.upper-header {
+  height: 20px;
+  width: 100%;
+  padding: 5px;
+  background-color: #377ae3;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.upper-header a {
+  text-decoration: none;
+  color: white;
+  font-weight: 300;
+  font-size: 0.8em;
+  padding-right: 200px;
+}
+
 header {
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 5px;
 }
 header img {
   height: 80px;
@@ -41,22 +58,26 @@ header ul li {
   font-size: 1.1em;
 }
 header ul li input {
-  margin-left: 80px;
+  margin-left: 50px;
   -webkit-appearance: none;
   border: none;
-  border-bottom: 2px solid deepskyblue;
+  border-bottom: 2px solid #377ae3;
   width: 130px;
+  color: black;
 }
 header ul a {
   text-decoration: none;
   color: black;
 }
 header ul a:hover {
-  color: deepskyblue;
+  color: #377ae3;
 }
-header .jumbotron {
-  height: 200px;
+
+.jumbotron {
+  height: 400px;
+  width: 100%;
   background-image: url("/images/jumbotron.jpg");
+  background-size: cover;
 }
 
 .serie-wrapper {
