--- a/laravel-comics/resources/sass/partials/_content.scss
+++ b/laravel-comics/resources/sass/partials/_content.scss
@@ -1,17 +1,46 @@
 #series{
+    background-color: #1b1c1b;
+
+    .current-series{
+        position: absolute;
+        top: 515px;
+        left: 100px;
+        :hover{
+            box-shadow: 7px 7px;
+        }
+        h2{
+            background-color: #377ae3;
+            padding: 15px;
+            color: white;
+        }
+    }
+
     .main-container{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        padding-top: 50px;
         .card{
             padding: 20px;
-            text-align: center;
             flex-basis: calc(100% / 6 - 40px);
-            .background-thumb{
-                height: 200px;
-                
+            background-color: #121212;
+            margin: 10px;
+            text-align: center;
+            border-radius: 15px;
+            a{
+                text-decoration: none;
+                color: white;
+                text-transform: uppercase;
+                font-size: 0.9em;
+                img{
+                    border-radius: 15px;
+                }
+                p{
+                    margin-top: 15px;
+                    font-size: 1.1em;
+                }
             }
-        }
+        } 
         
     }
 }
