--- a/laravel-comics/resources/sass/partials/serie.scss
+++ b/laravel-comics/resources/sass/partials/serie.scss
@@ -1,25 +1,48 @@
 
+.linea-blu{
+    height: 80px;
+    background-color: #377ae3;
+    #immagine-thumb{
+        height: 200px;
+        position: absolute;
+        top: 400px;
+        left: 415px;
+    }
+}
+
 .serie-wrapper{
     display: flex;
     padding: 50px;
     justify-content: center;
-    .container-left{
-        width: 40%;
-        padding-right: 50px;
-        .contenitore-price{
-            display: flex;
-            justify-content: space-between;
-            background-color: green;
-            padding: 10px;
-            color: white;
-            margin-bottom: 15px;
-        }
-    }
-}
 
-#immagine-thumb{
-    height: 250px;
-    margin-left: 450px;
+        .container-left{
+            width: 40%;
+            padding-right: 50px;
+            h2{
+                text-transform: uppercase;
+                color: #194995;
+                padding-bottom: 10px;
+            }
+            .dispo-wrapper{
+                display: flex;
+            .contenitore-price-dispo{
+                width: 70%;
+                display: flex;
+                justify-content: space-between;
+                background-color: green;
+                padding: 10px;
+                color: white;
+                margin-bottom: 15px;
+            }
+            .contenitore-check-dispo{
+                background-color: green;
+                padding: 10px;
+                color: white;
+                margin-bottom: 15px;
+                border-left: 1px solid rgb(22, 22, 22);
+            }
+        }
+    }    
 }
 
 
@@ -27,12 +50,23 @@
     display: flex;
     padding: 50px;
     justify-content: center;
+    background-color: rgb(236, 236, 236);
     .left-spec{
-        width: 30%;
+        width: 20%;
+        margin-right: 50px;
+    }
+    .right-spec{
+        width: 20%;
         margin-right: 50px;
     }
     .container-talent{
         display: flex;
+        justify-content: space-between;
         border-top: 1px solid black;
+        padding: 10px;
     }
+}
+
+h4{
+    padding-bottom: 10px;
 }
